--- a/P02-VehiclesAPI/pricing-service/src/main/resources/application.properties
+++ b/P02-VehiclesAPI/pricing-service/src/main/resources/application.properties
@@ -1,1 +1,18 @@
-server.port=8082
+# Logging
+logging.level.org.springframework=DEBUG
+
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:mem:price_database
+
+#Eureka
+spring.application.name=price-service
+server.port=8762
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.client.instance.prefer-ip-address=true
+eureka.client.instance.hostname=price-service
+
+
+
