--- a/P02-VehiclesAPI/eureka/pom.xml
+++ b/P02-VehiclesAPI/eureka/pom.xml
@@ -39,7 +39,13 @@
       <artifactId>jaxb-api</artifactId>
       <version>2.4.0-b180725.0427</version>
     </dependency>
-	</dependencies>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>5.8.2</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 	<dependencyManagement>
     <dependencies>
       <dependency>
